[gd_scene load_steps=7 format=3 uid="uid://c4c8o2vcud5ux"]

[ext_resource type="Script" uid="uid://dgo11beuxhvqx" path="res://scripts/projectile/simple_projectile.gd" id="1_2or1o"]
[ext_resource type="Texture2D" uid="uid://brcb5ubp0cwdl" path="res://assets/sprites/simple_projectile_concept.png" id="1_gx08h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wydng"]
atlas = ExtResource("1_gx08h")
region = Rect2(40, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpfvp"]
atlas = ExtResource("1_gx08h")
region = Rect2(48, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_puu0l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wydng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpfvp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ydfj"]
radius = 5.0

[node name="SimpleProjectile" type="Node2D"]
script = ExtResource("1_2or1o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 0.7853982
sprite_frames = SubResource("SpriteFrames_puu0l")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_1ydfj")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
